cmake_minimum_required(VERSION 3.14)
project(PC2)

set(CMAKE_CXX_STANDARD 14)

add_executable(PC2 main.cpp main_test.cpp Arena.h Arena.cpp Fight.h Fight.cpp Fighter.h Fighter.cpp Defense.h Defense.cpp Attack.h Attack.cpp Elude.h Elude.cpp Shield.h Shield.cpp Armor.h Armor.cpp BruceLee.h BruceLee.cpp ChuckNorris.h ChuckNorris.cpp JasonStatham.h JasonStatham.cpp catch.hpp Saber.h Saber.cpp Punch.h Punch.cpp Firearm.h Firearm.cpp )